package UI;

import java.awt.*;

public interface Renderer {

    void draw(Graphics2D g);
}
