package core;

public interface ISystem {
    void update();
}
