package entity;

public class Player extends Entity {

    public Player() {


    }
}
