package map;

import java.awt.image.BufferedImage;

public class Tile {
    public BufferedImage image;
    public boolean collision;
}